# integracao-dados-BPM

./: .gitignore  IntegracaoDados IBGE.ipynb  README.md  dadosIBGE.py  dadosOcorrencia.py  dadosResponsavel.py  main.py  pascoaDW.db  pascoaODS.db  pyproject.toml
config/: conexao.py  conexaoDW.py  conexaoODS.py
data/: pascoaODS.db
repository/: BPMDWRepository.py  BPMODSRepository.py  DPDWRepository.py  DPODSRepository.py  areaBPMDWRepository.py  areaBPMODSRepository.py  municipioDWRepository.py  municipioODSRepository.py  ocorrenciasDWRepository.py  ocorrenciasODSRepository.py  periodoDWRepository.py  responsavelODSRepository.py
src/: dadosAreaBPM.py  dadosBPM.py  dadosDP.py  dadosIBGE.py  dadosOcorrencia.py  dadosPeriodo.py  dadosResponsavel.py
